# data-analysis-jupyter-template

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
data/: data.csv
notebooks/: notebook.py
src/: __init__.py  preprocess.py
tests/: test_preprocess.py
