[tool.poetry]
name = "python-data-project-template"
version = "0.1.0"
description = ""
authors = ["Taiki Kanda <taiki@konnyak.com>"]
license = "MTI"

[tool.poetry.dependencies]
python = "^3.9"
numpy = "^1.20.3"
pandas = "^1.2.4"
matplotlib = "^3.4.2"

[tool.poetry.dev-dependencies]
ipython = "^7.24.1"
pytest = "^6.2.4"
jupyter = "^1.0.0"
jupytext = "^1.11.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
